[project]
name = "symbeam"
version="2.0.0"
authors = [{name = "António Manuel Couto Carneiro @FEUP", email = "amcc@fe.up.pt"}]
description = "A pedagogical package for bending diagrams"
keywords = [
    "bending-moment-diagrams",
    "statics",
    "sympy",
    "python3",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.6"
dependencies = [
    "certifi>=2020.6.20",
    "cycler>=0.10.0",
    "kiwisolver>=1.2.0",
    "matplotlib>=3.3.1",
    "mpmath>=1.1.0",
    "numpy>=1.19.1",
    "Pillow>=7.2.0",
    "pyparsing>=2.4.7",
    "python-dateutil>=2.8.1",
    "six>=1.15.0",
    "sympy>=1.6.2",
]
license = { file = "LICENSE" }

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/amcc1996/symbeam"
Download = "https://github.com/amcc1996/symbeam/releases/tag/1.1.1"
Source = "https://github.com/amcc1996/symbeam"
Tracker = "https://github.com/amcc1996/symbeam/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "colorama>=0.4.6",
    "flake8>=4.0.1",
    "isort[colors]>=5.8.0",
    "pytest>=7.0.1",
    "pytest-mpl>=0.17.0",
]

[tool.black]
line-length = 92
